--- a/BioReactors/templates/BioReactors/restblocks/html/BiochemicalReactionsDoc.html
+++ b/BioReactors/templates/BioReactors/restblocks/html/BiochemicalReactionsDoc.html
@@ -33,8 +33,8 @@ a\ A + b\ B \rightarrow c\ C + d\ D
 CH_{4} + 2O_{2} \rightarrow CO_{2} + 2H_{2}0
 \end{equation*}
 </div>
-<p>a coefficient of <span class="math">\(2\)</span> must be placed before the oxygen gas on the reactants side and before the water on the products
-side in order for, as per the law of conservation of mass, the quantity of each element does not change during the reaction.</p>
+<p>A coefficient of <span class="math">\(2\)</span> must be placed before the oxygen gas on the reactants side and before the water on the products
+side in order for, as per the law of conservation of mass, the quantity of each element not to change during the reaction.</p>
 </div>
 <div class="section" id="reaction-rate">
 <h1><a class="toc-backref" href="#id7">2.&nbsp;&nbsp;&nbsp;Reaction rate</a></h1>
@@ -60,8 +60,8 @@ per liter (molarity, <span class="math">\(M\)</span>); <span class="math">\(x\)<
 represent stoichiometric coefficients, i.e. <span class="math">\(a\)</span> and <span class="math">\(b\)</span> but this is not the case). <span class="math">\(k\)</span> is the rate
 coefficient or rate constant of the reaction. The value of this coefficient <span class="math">\(k\)</span> depends on conditions such as temperature,
 ionic strength, surface area of the adsorbent, light irradiation or others.</p>
-<p>The exponents <span class="math">\(x\)</span>  and <span class="math">\(y\)</span> are called reaction orders and depend on the reaction mechanism. According the law of mass action <a class="citation-reference" href="#br2009" id="id4">[BR2009]</a>
-for elementary (single-step) reaction (i.e. for reaction with no intermediate steps in its reaction mechanism) the order in each reactant
+<p>The exponents <span class="math">\(x\)</span>  and <span class="math">\(y\)</span> are called reaction orders and depend on the reaction mechanism. According to the law of mass action <a class="citation-reference" href="#br2009" id="id4">[BR2009]</a>
+for elementary (single-step) reaction (i.e. for reaction with no intermediate steps in its reaction mechanism), the order in each reactant
 is equal to its stoichiometric coefficient (for our example if the reaction is elementary then <span class="math">\(x=a\)</span> and <span class="math">\(y=b\)</span>).
 For complex (multistep) reactions, however, as we note above, this is not true.</p>
 <p>By using the mass balance for the system in which the reaction occurs, expressions (ordinary differential equations) for the rate of
@@ -76,9 +76,9 @@ change of the concentration of the reactants and products can be derived. For ou
 </div>
 <div class="section" id="solver-for-biochemical-reactions">
 <h1><a class="toc-backref" href="#id8">3.&nbsp;&nbsp;&nbsp;Solver for biochemical reactions</a></h1>
-<p>A <strong>biochemical reaction</strong> is the transformation of one molecule to a different molecule inside a cell. Biochemical reactions
+<p>A <strong>biochemical reaction</strong> is the transformation of one molecule into a different molecule inside a cell. Biochemical reactions
 are mediated by enzymes, which are biological catalysts that can alter the rate and specificity of chemical reactions inside cells.</p>
-<p>Our solver for biochemical reactions suppose that:</p>
+<p>Our solver for biochemical reactions assumes that:</p>
 <ul class="simple">
 <li>the reactions are elementary, i.e. the rate of each reaction is proportional to the product of the concentrations of its reactants</li>
 <li>the stoichiometric coefficients of reactants and products are 1 (e.g.  <span class="math">\(a = b = ... = 1\)</span>).</li>
@@ -92,7 +92,7 @@ initiated by a bond (more generally, a binding interaction) between the enzyme a
 biochemist Leonor Michaelis and Canadian physician Maud Menten, who investigated the kinetics of an enzymatic reaction mechanism,
 invertase, that catalyzes the hydrolysis of sucrose into glucose and fructose. In 1913, they proposed a mathematical model of the reaction.
 It involves an enzyme <span class="math">\(E\)</span> binding to a substrate <span class="math">\(S\)</span> to form a complex <span class="math">\(ES\)</span>, which in turn is converted into a product
-<span class="math">\(P\)</span> and the enzyme. This may be represented schematically by a chemical equations as</p>
+<span class="math">\(P\)</span> and the enzyme. This may be represented schematically by chemical equations as</p>
 <div class="math">
 \begin{equation*}
 E + S \, \overset{k_f}{\underset{k_r} \rightleftharpoons} \, ES \, \overset{k_\mathrm{cat}} {\longrightarrow} \, E + P
@@ -108,7 +108,7 @@ reactants and products with time <span class="math">\(t\)</span>:</p>
 <p><span class="math">\(\frac{d[\mathrm{ES}]}{dt} = k_f[\mathrm{E}][\mathrm{S}] - k_r[\mathrm{ES}] - k_\mathrm{cat}[\mathrm{ES}]\)</span></p>
 <p><span class="math">\(\frac{d[\mathrm{P}]}{dt} = k_\mathrm{cat}[\mathrm{ES}]\)</span></p>
 </blockquote>
-<p>One solution of the system is shown on the <a class="reference internal" href="#figure" target="_self">figure</a> below.</p>
+<p>One solution of the system is shown in the <a class="reference internal" href="#figure" target="_self">figure</a> below:</p>
 <div class="figure align-center" id="figure">
 <img alt="/static/BioReactors/img/ModuleImages/BiochemicalReactions.png" src="/static/BioReactors/img/ModuleImages/BiochemicalReactions.png" />
 <p class="caption">Michaelis–Menten kinetics: change in concentrations over time for enzyme E, substrate S, complex ES and product P
